<resources>
    <string name="app_name">DripBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Messenger</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="home_second">Home Second</string>
    <string name="write_a_message">Type your message</string>
    <string name="password">password</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="account">Already have an Account ?</string>
    <string name="register">Register</string>
    <string name="err_name">The name field is required</string>
    <string name="err_bvn">The bvn field is required</string>
    <string name="err_l_name">The last name field is required</string>
    <string name="err_f_name">The first name field is required</string>
    <string name="err_acct">The account type field is required</string>
    <string name="err_email">The email field is required</string>
    <string name="err_phone">The phone number field is required</string>
    <string name="err_address">The address field is required</string>
    <string name="err_dob">Date of birth field is required</string>
    <string name="err_gender">The gender field is required</string>
    <string name="err_password">The password field is required</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register_here">Register here!</string>
    <string name="cash_out">Cash Out</string>
    <string name="text_view">TextView</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account</string>
    <string name="username">Username</string>
    <string name="drip_level">Drip Level</string>
    <string name="deposit">Deposit</string>
    <string name="user_avatar">user avatar</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_image">User Image</string>
    <string name="profile">Profile</string>
    <string name="messenger">Messenger</string>
    <string name="transfer">Transfer</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="amount">Amount</string>
    <string name="account_register">Account Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_type">Account Type</string>
    <string name="next">Next</string>
    <string name="_234">+234</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="process">Process</string>
    <string name="bvn">BVN</string>
    <string name="space"> </string>
    <string name="choose_file">Pick a file</string>
    <string name="pin">Pin</string>
    <string name="cvv">cvv</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">09/20</string>
    <string name="logo_description">DripBank Logo</string>
</resources>
