<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_register"
            android:textAlignment="center"
            android:textSize="22sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_234"
                android:id="@+id/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/address"
                android:inputType="textMultiLine"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:id="@+id/dob"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:drawablePadding="10dp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:id="@+id/gender"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:drawablePadding="10dp"
                />

        <Button
            android:id="@+id/btn_process"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onCreateOptionsMenu"
            android:text="@string/process" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:id="@+id/id_loader"/>



    </LinearLayout>

</LinearLayout>